# title-belt-nhl

./: .gitignore  README.md  config.json  main.py  pyproject.toml
.github/workflows/: config.yml  publish.yml
title_belt_nhl/: main.py  schedule.py  utils.py
title_belt_nhl/models/: nhl_team_schedule_response.py
title_belt_nhl/service/: nhl_api.py
title_belt_nhl/static/: nhl_tms.py
title_belt_nhl/tests/: test_schedule.py
title_belt_nhl/tests/test_files/: mock_league_schedule_all.json
