[tool.poetry]
name = "title-belt-nhl"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "title_belt_nhl" }]
include = ["title_belt_nhl/static/config.json", "title_belt_nhl/static/schedule.csv"]

[tool.poetry.scripts]
title-belt-nhl = 'title_belt_nhl.main:cli'
test = "pytest"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# # Enable Pyflakes `E` and `F` codes by default.
select = ["F", "E", "W", "I", "N", "YTT", "A", "C4", "RET", "SIM"]
ignore = [
    "A003",
    "E402",
    "E741",
    "F403",
    "N802",
    "N803",
    "N806",
    "N812",
    "N815",
    "RET503",
    "RET504",
    "RET505",
    "SIM102",
]
line-length = 90
[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.pytest.ini_options]
pythonpath = ["."]